packages/end-user/src/css/components/_card.scss
// CARDS
$card-bg: white;
$card-width: 400px;
$card-padding-bottom: $spacing-xl;
$card-padding-top: $spacing-xl;
$card-padding-horizontal: $spacing-xl;

.card {
    background: $card-bg;
    box-shadow: $shadow-overlay;
    box-sizing: border-box;
    margin: 0 auto;
    max-width: $card-width;
    min-height: 200px;
    position: relative;
    width: 100%;
    padding: $card-padding-top $card-padding-horizontal $card-padding-bottom $card-padding-horizontal;

    &--no-padding {
        padding: 0;
    }

    &--wide {
        max-width: 550px;
        .card__error {
            width: 210%;
        }
    }
    &--auto-height {
        min-height: auto;
    }

    &--error {
        background: $color-light-red;
        overflow: hidden;
    }

    &__error {
        height: 200%;
        border-radius: 100% 100% 0 0;
        background-color: white;
        top: 217px;
        position: absolute;
        width: 250%;
        margin-left: -300px;
    }

    &--slim {
        min-height: unset;
    }

    &--slim > &__content{
        padding: 20px;
    }

    &__content {
        padding: $card-padding-top $card-padding-horizontal $card-padding-bottom $card-padding-horizontal;
        position:relative;
    }

    &__message {
        padding: $spacing-sm;
        display: flex;
        align-items: center;

        &--icon {
            flex: 1;
            flex-grow: 0;
            margin-right: $spacing-xs;

            img {
                width: 30px;
                height: 30px;
            }
        }

        &--content {
            flex: 1;
            font-size: $font-size-sm;
        }
    }

}

